# cpp_2026_gyak_proj

./: README.md  apply_solutions.sh  update_materials.sh
02_memory_realms/tests/: test_session02.cpp
docs/: ci_checks.md  git_workflow.md
sessions/01_compilers_forge/: README.md
sessions/01_compilers_forge/starter/: display.cpp  display.h  main.cpp
sessions/02_memory_realms/: CMakeLists.txt  README.md
sessions/02_memory_realms/solution/: inventory.h  main.cpp
sessions/02_memory_realms/starter/: inventory.cpp  inventory.h  inventoryOpt.cpp  inventoryOpt.h  item.cpp  item.h  main.cpp
sessions/02_memory_realms/tests/: test_session02.cpp
sessions/03_stream_of_knowledge/: CMakeLists.txt  README.md
sessions/03_stream_of_knowledge/solution/: game_state.h  main.cpp
sessions/03_stream_of_knowledge/starter/: game_state.h  main.cpp  save.txt
sessions/03_stream_of_knowledge/tests/: test_session03.cpp
sessions/04_guardian_spirits/: CMakeLists.txt  README.md
sessions/04_guardian_spirits/solution/: main.cpp  weapon.h
sessions/04_guardian_spirits/starter/: main.cpp  weapon.h
sessions/04_guardian_spirits/tests/: test_session04.cpp
sessions/05_crafting_classes/: CMakeLists.txt  README.md
sessions/05_crafting_classes/starter/: main.cpp  spell.h
sessions/05_crafting_classes/tests/: test_session05.cpp
sessions/06_hidden_implementation/: CMakeLists.txt  README.md
sessions/06_hidden_implementation/starter/: game_engine.cpp  game_engine.h  main.cpp
sessions/06_hidden_implementation/tests/: test_session06.cpp
